Meta title , meta description

--- a/new-era-solar-client/public/index.html
+++ b/new-era-solar-client/public/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="fJFn8-nUIYPsrJ7CMV6dvNHYxAWCkDvsp_93Y1CXBuU" />
+
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="New Era Energies helps you go solar with a smooth experience. We provide thorough guidance to our customers while installing solar panels at their place!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/new-era-logo.png" />
     
@@ -17,7 +19,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
 
-    <title>New Era Energies</title>
+    <title>Top Solar Panel Installation Company in USA | New Era Energies</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
